Changed some image files, fixed an issue with the about background image not properly inheriting a blue shading on mobile.

--- a/css/header.css
+++ b/css/header.css
@@ -27,7 +27,7 @@
 }
 
 .header-central-title {
-    color: rgb(204, 198, 198);
+    color: rgb(231, 230, 230);
     font-size: 26px;
     width: 100%;
     text-align: center;
